<resources>
    <string name="app_name">畅联</string>
    <string name="title_setting">设置</string>
    <string name="title_message">留言</string>
    <string name="title_service">对话</string>
    <string name="title_data">数据</string>
    <string name="title_monitor">监控</string>
    <string name="title_home">首页</string>
    <string name="title_work">订单</string>
    <string name="radio_service">客服</string>
    <string name="radio_maneger">管理员</string>
    <!--suppress CheckTagEmptyBody -->
    <string name="empty"></string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="sign_in">登陆</string>
    <string name="forget_password">忘记密码？</string>
    <string name="remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="button_send">发送</string>
    <string name="button_commit">完成</string>
    <string name="quit">退出登录</string>
    <string name="clean">清除缓存文件</string>
    <string name="delete">删除</string>
    <string name="end">结束对话</string>
    <string name="start">立即体验</string>
    <string name="userInfo">账号信息</string>
    <string name="userID">账号ID</string>
    <string name="header">头像</string>
    <string name="userName">昵称</string>
    <string name="userSex">性别</string>
    <string name="userEmail">邮箱</string>
    <string name="userType">类型</string>
    <string name="state_online">在线</string>
    <string name="state_hangUp">挂起</string>
    <string name="chart_data">今日流量</string>
    <string name="rfm_data">RFM散点图</string>
    <string name="today_visit">访问量</string>
    <string name="today_chat">会话量</string>
    <string name="cs_window">客服窗口</string>
    <string name="done">保存</string>
    <string name="customer_level">优先级</string>
    <string name="customer_info">用户信息</string>
    <string name="customer_phone">手机</string>
    <string name="more_info">更多信息</string>
    <string name="customer_area">所在地</string>
    <string name="customer_ipAddr">IP地址</string>
    <string name="customer_registTime">注册时间</string>
    <string name="customer_loginTime">登录时间</string>
    <string name="customer_lastConversationTime">上次对话时间</string>
    <string name="order_new">新增订单</string>
    <string name="order_detail">订单详情</string>
    <string name="order_status">订单状态</string>
    <string name="order_id">订单号</string>
    <string name="order_customerId">客户账号</string>
    <string name="order_customerServiceId">受理客服账号</string>
    <string name="order_product_id">产品ID</string>
    <string name="order_address">送货地址</string>
    <string name="order_end_time">截止时间</string>
    <string name="order_tel">联系电话</string>
    <string name="order_remarks">客户备注</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="user_registTime">注册时间</string>
    <string name="order_edit">新建订单</string>
    <string name="ad">商品推荐</string>
    <string name="goods_info">商品信息</string>
    <string name="goods_id">商品ID</string>
    <string name="goods_category_id">商品类别ID</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_remark">商品描述</string>
    <string name="goods_status">商品库存</string>
    <string name="goods_pic">商品图片</string>
    <string name="see_detail">查看详情</string>
    <string name="keyWord">关键词</string>
    <string name="New">New</string>
    <string name="conversation_complete">会话完成</string>
    <string name="degree">满意指数</string>
    <string name="newCustomer">新增客户</string>
    <string name="danger">报警次数</string>
    <string name="zero">0</string>
    <string name="zero_persent">0%</string>
    <string name="search">搜索</string>
    <string name="copy">复制</string>
    <string name="hot_word">热词统计</string>
    <string name="knowledge_title">知识标题</string>
    <string name="knowledge_category">知识类别</string>
    <string name="knowledge_content">知识内容</string>
    <string name="quick_reply">快捷回复</string>
    <string name="trans">客服转接</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>