<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_id"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_category_id"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_category_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_price"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="2dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_remark"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_remark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="@android:color/white"
            android:elevation="0.5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:text="@string/goods_status"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/goods_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:textColor="@color/grey_700"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:minHeight="54dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/goods_pic"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="normal" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:elevation="0.5dp"
            android:layout_marginBottom="2dp">

            <ImageView
                android:id="@+id/goods_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/empty" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>